k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bnr-dashboard
  namespace: default
spec:
  selector:
    app: bnr-dashboard
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
