k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bnr-dashboard
  namespace: bnr-dashboard
spec:
  ingressClassName: nginx
  rules:
    - host: app.slax.ro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bnr-dashboard
                port:
                  number: 80
